--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/BIT-IMD-Learning-with-AS/IMD3901-term-project#readme",
   "dependencies": {
+    "aframe-extras": "^6.1.1",
     "express": "^4.17.2"
-  },
-  "devDependencies": {}
+  }
 }
